- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    5.6.1
 - 
    None
 - 
    Linux/X11
 
- 
        544bbcbcdabdd012cbcce484196053a0b9f37104
 
The wheel event is missing in submenus when XInput2 is enabled - XInput2 sends the wheel event to the root menu window. It must be properly redirected to submenu window when QPA chooses only root menu window.
- relates to
 - 
                    
QTBUG-60723 [REG 5.8->5.9]: When opening a combobox inside a webpage and using the mouse wheel to scroll the contents will cause it to close the drop down
-         
 - Closed
 
 -